# unity_reader

./: README  makefile
src/: CMakeLists.txt  hash_128.cpp  hash_128.h  main.cpp  scenes_handler.cpp  scenes_handler.h  scripts_handler.cpp  scripts_handler.h  unity_element.cpp  unity_element.h  utility.cpp  utility.h
test/test_input/Assets/Scenes/: SampleScene.unity.dump  SecondScene.unity.dump
